--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,168 @@ body {
     height: 240px;
   }
 }
+
+.l-modal__content {
+  width: 95vw;
+  max-height: 95vh;
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__content {
+    width: 85vw;
+    max-width: 520px;
+  }
+}
+
+.l-modal__body {
+  padding: 0 1rem 1.5rem;
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__body {
+    padding: 0 1.75rem 2rem;
+  }
+}
+
+.l-modal__footer {
+  padding: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__footer {
+    padding: 1.5rem 1.75rem;
+  }
+}
+
+.l-modal__icons {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__icons {
+    position: unset;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.75rem; /* Assuming the duplicate margin-bottom was a mistake, kept the larger value */
+  }
+}
+
+.l-modal__no_icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 0.75rem; /* Assuming the duplicate margin-bottom was a mistake, kept the larger value */
+}
+
+.l-modal__title {
+  color: #2e3031;
+  font-weight: 500;
+  font-size: 18px;
+  margin-top: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__title {
+    font-size: 24px;
+    margin-top: 0.75rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 37px;
+  }
+}
+
+.l-modal__title h3 {
+  margin: 0;
+}
+
+.l-modal__title_no_icon {
+  color: #1a1a1a;
+  font-weight: 500;
+  font-size: 18px;
+  width: 95%;
+  text-align: center;
+}
+
+.l-modal__title_no_icon h3 {
+  margin: 0;
+}
+
+.l-modal__desc {
+  color: #858585;
+  margin: 0;
+}
+
+.l-modal__icon {
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+}
+
+.l-modal__icon--wrapper {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__icon--wrapper {
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+    border-radius: 80%;
+    display: inline-block;
+    box-shadow: 0px 0px 0px 8px #fef3f2;
+  }
+}
+
+.l-modal__icon--wrapper svg {
+  width: 100%;
+  height: 100%;
+}
+
+.l-modal__icon--danger {
+  background-color: #fee4e2;
+  box-shadow: 0px 0px 0px 8px #fef3f2;
+}
+
+.l-modal__icon--info {
+  background-color: #e1f3ff;
+  box-shadow: 0px 0px 0px 8px #f0f9ff;
+}
+
+.l-modal__icon--success {
+  background-color: #d6f0d1;
+  box-shadow: 0px 0px 0px 8px #eaf8e7;
+}
+
+.l-modal__icon--gray {
+  background-color: #ecedee;
+  box-shadow: 0px 0px 0px 8px #f4f5f5;
+}
+
+.l-modal__back {
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+
+.l-modal__back span {
+  margin-left: 0.5rem;
+  color: #e60a2b;
+}
+
+@media screen and (min-width: 768px) {
+  .l-modal__back {
+    margin-top: 1rem;
+  }
+}
