--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -299,3 +299,238 @@ body {
   color: #e60a2b !important;
   border: 1px solid #fcb6c0 !important;
 }
+
+/* file uploader styles */
+
+.file-uploader {
+  overflow: auto;
+  padding: 1rem 1.5rem 0.5rem;
+  border: 1px solid #3d3e3f;
+  margin: 1.25rem 0;
+}
+
+.file-uploader_body {
+  border: 1px dashed #d9d9d9;
+  height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+  width: 100%;
+  border-radius: 0.375rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  cursor: pointer;
+}
+
+.file-uploader_body_not_uploading {
+  cursor: not-allowed;
+}
+
+.file-uploader_body .body_text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.file-uploader_body .text {
+  color: rgb(163, 163, 163);
+}
+
+.file-uploader_body .button_uploading {
+  color: rgb(163, 163, 163);
+  opacity: 0.4;
+}
+
+.file-uploader_body .button {
+  font-weight: 500;
+  color: #3d3e3f;
+}
+
+.file-uploader_body .button,
+.file-uploader_body .button_uploading {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background: none;
+}
+
+.file-uploader_file {
+  background: #f5f4f4;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1.5rem;
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.file-uploader_file_main {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 568px) {
+  .file-uploader_file_main {
+    gap: 1.5rem;
+  }
+}
+
+.file-uploader_file_main_inner {
+  width: 70px;
+  height: 70px;
+  border-radius: 9999px;
+  background: #fff;
+  padding: 0.5rem;
+  object-fit: cover;
+}
+
+.file-uploader_file_main_inner div {
+  height: 100%;
+  width: 100%;
+  border-radius: 100%;
+}
+
+.file-uploader_file .duration_box {
+  flex-grow: 1;
+}
+
+.file-uploader_file .duration_box label {
+  font-size: 0.875rem;
+  gap: 0.5rem;
+  font-weight: 500;
+  color: #4b4d4e;
+}
+
+.file-uploader_file .duration_box .text {
+  font-size: 0.75rem;
+  color: rgb(133, 133, 133);
+  display: flex;
+  align-items: center;
+  margin-top: 0.5rem;
+  gap: 7px;
+}
+
+.file-uploader_file .duration_box .text div {
+  width: 0.25rem;
+  height: 0.25rem;
+  background-color: rgb(133, 133, 133);
+  border-radius: 9999px;
+}
+
+.file-uploader_file .has_uploaded {
+  background-color: rgba(183, 183, 183, 0.2);
+  padding: 0.75rem;
+  border-radius: 8px;
+  display: flex;
+}
+
+.file-uploader_file .has_uploaded svg {
+  cursor: pointer;
+}
+
+.file-uploader_file .has_uploaded p {
+  color: rgb(230, 10, 43);
+  font-weight: 600;
+}
+
+.file-uploader_file .has_uploaded span {
+  color: rgb(133, 133, 133);
+}
+
+.file-uploader_file .uploading_text {
+  font-size: 0.75rem;
+  color: rgb(133, 133, 133);
+}
+
+.file-uploader_file .is_uploading {
+  position: relative;
+  overflow: hidden;
+  height: 6px;
+  border-radius: 0.375rem;
+  background: #fff;
+  width: 100%;
+  max-width: 10%;
+}
+
+.file-uploader_file .is_uploading div {
+  background-color: rgb(230, 10, 43);
+  border-radius: 9999px;
+}
+
+.file-uploader_edit {
+  width: 100%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 175px;
+  cursor: pointer;
+}
+
+.file-uploader_edit p {
+  text-align: center;
+  color: #fff;
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.file-uploader_multiple {
+  display: flex;
+  gap: 1rem;
+  margin: 1.25rem 0;
+  flex-direction: column;
+}
+
+.file-uploader_multiple .has_uploaded {
+  background-color: rgba(183, 183, 183, 0.2);
+  padding: 0.75rem;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.file-uploader_multiple .has_uploaded svg {
+  cursor: pointer;
+}
+
+.file-uploader_multiple .has_uploaded p {
+  color: rgb(230, 10, 43);
+  font-weight: 600;
+}
+
+.file-uploader_multiple .has_uploaded span {
+  color: rgb(133, 133, 133);
+}
+
+.file-uploader_multiple .has_uploaded_wrapper {
+  padding: 1rem 0;
+}
+
+.file-uploader_multiple .multiple_wrapper {
+  background: #fff;
+  padding: 1rem 1.5rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  color: #4b4d4e;
+  border-radius: 6px;
+  border: 1px solid #ededee;
+  text-align: center;
+}
+
+@media screen and (min-width: 568px) {
+  .file-uploader_multiple {
+    flex-direction: row;
+  }
+
+  .file-uploader_multiple .multiple_wrapper {
+    display: flex;
+    align-items: center;
+  }
+}
