--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,18 @@ body {
     url('https://d3u7b9fq2opvwp.cloudfront.net/upload-service/935ce589-c643-482d-97ed-791fa48e6e20:IMG_4674.jpg');
 }
 
+.we_are_bg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: linear-gradient(
+      to left,
+      rgba(255, 0, 0, 0),
+      rgb(37, 36, 36)
+    ),
+    url('https://d3u7b9fq2opvwp.cloudfront.net/upload-service/95fc1efd-5f77-4cdf-ab2d-442905140a5b:IMG_9021.jpg');
+}
+
 .box {
   align-self: flex-end;
   animation-duration: 2s;
