--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,7 +174,7 @@ body {
       rgba(39, 37, 37, 0.699),
       rgba(39, 37, 37, 0.651)
     ),
-    url('https://d3u7b9fq2opvwp.cloudfront.net/upload-service/929793bf-a0d9-446e-9a05-d2a40a8781ae:IMG_3255.JPG');
+    url('https://d3u7b9fq2opvwp.cloudfront.net/upload-service/1fbc9c18-d283-4af1-9873-7b54a6debcfc:WhatsApp%20Image%202024-05-13%20at%2017.24.45.jpeg');
 }
 .box {
   align-self: flex-end;
