--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,8 +170,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("http://res.cloudinary.com/dggsagtrj/image/upload/v1723734831/wnf7szu3e3vgnloforog.jpg");
-  opacity: 30;
+  background-image: url("https://res.cloudinary.com/dggsagtrj/image/upload/v1724610467/jk3dvanegr0ob366f7fk.png");
 }
 
 .we_are_bg {
