--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,7 +181,17 @@ body {
     ),
     url('https://d3u7b9fq2opvwp.cloudfront.net/upload-service/30d9e9a0-80b6-482a-a5cd-bd56b547e867:IMG_4362.JPG');
 }
-
+.the_assemble_bg {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: linear-gradient(
+      to left,
+      rgba(255, 0, 0, 0),
+      rgba(112, 109, 109, 0.281)
+    ),
+    url('/bg1.jpg');
+}
 .campaign_modal {
   background-size: cover;
   background-repeat: no-repeat;
