--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,6 +103,26 @@ body {
   color: #3d3e3f;
 }
 
+/* stylish scrollbar */
+.scrollable-div::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.scrollable-div::-webkit-scrollbar-track {
+  background-color: #e8e8e8;
+  border-radius: 0.5rem;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb {
+  background-color: #d1d5db;
+  border-radius: 0.5rem;
+}
+
+.scrollable-div::-webkit-scrollbar-thumb:hover {
+  background-color: #9ca3af;
+}
+
 /* @media screen and (min-width: 1024px) {
   .product_image {
     width: 200px;
