--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,7 @@
 @import 'slick-carousel/slick/slick.css';
 @import 'slick-carousel/slick/slick-theme.css';
 @import url('https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&family=Tenor+Sans&display=swap');
-
-/* @import url('/fonts/daikon/fonts.css'); */
+@import url('/fonts/daikon/fonts.css');
 
 @layer base {
   :root {
@@ -93,9 +92,9 @@
   }
 }
 
-/* .daikon {
+.daikon {
   font-family: 'Daikon', sans-serif;
-} */
+}
 .tenali {
   font-family: var(--font-tenali), sans-serif;
   font-weight: 400;
