--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,12 +129,12 @@ body {
 }
 
 .scrollable-div::-webkit-scrollbar-thumb {
-  background-color: #d1d5db;
+  background-color: #523f3f71;
   border-radius: 0.5rem;
 }
 
 .scrollable-div::-webkit-scrollbar-thumb:hover {
-  background-color: #9ca3af;
+  background-color: #523f3fab;
 }
 /* Hide Google Translate elements */
 .goog-te-banner-frame,
